# GraFT

./: .gitignore  README.md  pyproject.toml
Article/: README.md
Article/code/synthetic_data/frangi_sato/: frangi-sato.py
Article/code/synthetic_data/frangi_sato/noise10/: sato_vs_frangi.tiff  sato_vs_frangi_nonoise.tiff  sato_vs_frangi_nonoise_line_position.csv
Article/code/synthetic_data/others_code/TSOAX/timeseries/10_lines_stack/: TSOAX_lines_track.csv.npy
Article/code/synthetic_data/timeseries/10_lines_stack/: gernerate_simple_timeseries_data.py  graft_comparison_figs.py
src/graft/: main.py  utilsF.py
tests/: __init__.py
