[tool.poetry]
name = "GraFT"
version = "0.1.0"
description = "A Python package for analysing a graph of filaments over time."
authors = ["Isabella Østerlund <isa@plen.ku.dk>"]
maintainers = ["Arne Neumann <graft.programming@arne.cl>"]
packages = [
    { include = "graft", from = "src" },
    { include = "graft/data", from = "src" }
]
include = ["src/graft/data/*.tif"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
NetworkX = ">=2.8.4,<3.0"
scikit-image = ">=0.22,<0.23"
scipy = ">=1.11,<1.14"
pandas = ">=2.1,<2.3"
numpy = ">=1.26,<2.0"
matplotlib = ">=3.8,<3.9"
simplification = ">=0.7.12,<0.8"
plotly = ">=5.18,<6.0"
astropy = ">=6.0,<7.0"
Scikit-spatial = ">=6.8.0,<9.0"
kaleido = ">=0.2.1,<1.0"
streamlit = ">=1.33,<2.0"
pytest = "^8.0"
memory_profiler = "0.61.0"

[tool.poetry.group.dev.dependencies]
line_profiler = "4.1.3"

[tool.poetry.scripts]
graft-cli = "graft.cli:main"
graft-webapp = "graft.streamlit_app:run"

[build-system]
requires = ["poetry-core>=1.8.0", "setuptools>=69.0.0"]
build-backend = "poetry.core.masonry.api"
